data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_216.wast
;; 7. **Test Input: Loop with Invalid Branch Target**    - Description: Create a loop where a `br` instruction targets an invalid or non-existent label index.    - Constraint: Verify error handling when branch targets are out of scope or invalid.    - Focus: Test error reporting differences when invalid branch targets are encountered.

(assert_invalid 
  (module (func $loop-with-invalid-branch 
    (loop 
      (br 1) 
    ) 
  )) 
  "unknown label"
)